# sqlparse-py3.2.5

./: .gitmodules  AGENTS.md  CHANGELOG  Makefile  bx_test.cfg  datamgr.error.txt  datamgr.exe.config.path  hashlib.py  oracle-env.txt  ou-diag.2025-08-26.13-39.txt  ou-diag.cs  ou-diag.exe.config.local  ou-diag.exe.config.path  ou-diag.from-ps.txt  ou-diag.instant-client-19-26.txt  ou-diag.ora32.txt  ou-diag.oracle-dll.txt  ou-diag.py  pyproject.toml  run-datamgr.cmd  run-datamgr.notes.txt  run-datamgr.ps1  run-datamgr.ps1.errors.txt  setup.py  shift-ext-to-end.py  shortcut-command.txt
behavior/across/: gap.txt  into.expected.sql  sqlparse.ini
behavior/down/: gap.txt  (+2 more)
doc/: Config-Option-Implementation-Plan.md  Configuration-Options-Thus-Far.md  Enhancements.md  Formatting-Plugin-Architecture.md  Plugin-Developer-Guide.md  SqlParse-Processing.md
docs/: sqlformat.1
examples/: extract_table_names.py
issue/: clang-style-parameters.md  example.sqlparse  exec-sql--model.txt  into.esql  into.expected.sql  into.raw  into.txt  into.unformatted.sql  keyword-align-longest.md
scripts/: erradd  require-branch-3.2.5
sqlparse/: __init__.py  cli.py  config.py  formatter.py  lexer.py  sql.py
tests/: conftest.py  test_blocks_plugin.py  test_case_expr_plugin.py  test_clauses_plugin.py  test_cli.py  test_comments_plugin.py  test_config.py  test_create_table_plugin.py  test_declare_cursor_plugin.py  test_dialect.py  test_dialect_strictness.py  test_format.py  test_formatter_config.py  test_id_layout_hanging.py  test_into_comma_first.py  test_keyword_align_longest.py  test_list_controls.py  test_pad_after_keyword_subquery.py  test_penalties_plugin.py  test_plugin_discovery.py  test_plugin_joins.py  test_plugins_cte.py  test_predicates.py  test_regressions.py  test_spacing_casing_plugin.py  test_subqueries_plugin.py
(+39 files in other folders)
